Fix canvas display sizing and move mode controls to fixed position

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </aside>
 
         <section class="workspace">
-          <div class="topbar">
+          <div class="mode-bar">
             <div class="mode-steps">
               <div class="step" data-step="convert">1 変換</div>
               <div class="arrow">→</div>
@@ -80,7 +80,9 @@
               <button id="backToConvertBtn" class="ghost hidden">変換に戻る</button>
               <button id="finalizeBtn" class="primary">編集に進む</button>
             </div>
+          </div>
 
+          <div class="topbar">
             <div class="group normalize-only">
               <div class="group-title">変換方法</div>
               <div class="row">
