--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
       </div>
     </div>
 
+    <button type="button" id="addImageBtn" class="floating-add-btn" title="画像を追加">画像を追加</button>
     <script src="app.js"></script>
   </body>
   </html>
